# account-module

./: .gitignore  Cargo.toml  build.rs
dart_packages/account_module/: .flutter-plugins-dependencies  .gitignore  generate_protocols.ps1  pubspec.yaml
manage_defines/: 10201_accounts.toml  10202_invites.toml
protocols/: account.proto  account_service.proto  account_status.proto  invite.proto  login.proto  password.proto
src/: account_server.rs  lib.rs
src/account/: account_status.rs  add_new_account.rs  get_account_by_id.rs  get_account_groups.rs  get_account_login_timestamps.rs  get_account_passwd_hash.rs  is_account_stopped.rs  login_status.rs  mod.rs  update_account_login_timestamps.rs  validate_is_admin.rs
src/account_service_handles/: get_account_entity_doc.rs  handle_add_account_into_group.rs  handle_change_account_password.rs  handle_change_account_status.rs  handle_change_own_password.rs  handle_login.rs  handle_new_account.rs  handle_remove_account_from_group.rs  mod.rs
src/ids_codes/: field_ids.rs  manage_ids.rs
src/invite/: check_invite_limit.rs  check_invite_status.rs  get_invite_entity.rs  group_invite_limit_config.rs  mod.rs
src/managers/: accounts_manager.rs  mod.rs
src/protocols/: account_service.rs  mod.rs
src/service_handles/: get_account_entity_doc.rs  handle_activate_invite.rs  handle_add_account_into_group.rs  handle_change_account_password.rs  handle_change_account_status.rs  handle_change_own_password.rs  handle_invite_friend.rs  handle_login.rs  handle_new_account.rs  handle_remove_account_from_group.rs  mod.rs
(+20 files in other folders)
