[package]
name = "account_module"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = { version = "0.9.2", features = ["tls"] }
serde = "1.0"
serde_derive = "1.0"

dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tonic",
  "tokio",
  "bson",
  "log",
  "chrono",
  "parking_lot",
  "rust-i18n",
  "once_cell",
] }

auth = { path = "../cashmere_core/auth" }
entity = { path = "../cashmere_core/entity" }
majordomo = { path = "../cashmere_core/majordomo" }
managers = { path = "../cashmere_core/managers" }
manage_define = { path = "../cashmere_core/manage_define" }
cash_core = { path = "../cashmere_core/cash_core" }
view = { path = "../cashmere_core/view" }
cash_result = { path = "../cashmere_core/cash_result" }
configs = { path = "../cashmere_core/configs" }
service_utils = { path = "../cashmere_core/service_utils" }

[build-dependencies]
dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tonic-build",
] }
manage_define = { path = "../cashmere_core/manage_define" }
